--- a/SEDC.MovieApp/SEDC.MovieApp.DataAccess/SEDC.MovieApp.DataAccess.csproj
+++ b/SEDC.MovieApp/SEDC.MovieApp.DataAccess/SEDC.MovieApp.DataAccess.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SEDC.MovieApp.Domain\SEDC.MovieApp.Domain.csproj" />
   </ItemGroup>
 
